updates the files

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <section class="project-section" id="Projects" data-aos="fade-down">
             <div class="circle top-left"></div>
             <div class="circle bottom-right"></div>
-            <h2>Projects</h2>
+            <h2 id="project-heading">Projects</h2>
             <div class="project-grid">
                 <div class="project-card" data-aos="fade-down" data-aos-delay="200">
                     <img src="./images/delivery res.png" alt="Project One">
