Updates the files

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <form class="contact-form" action="/submit-form" method="post">
                     <div style="display: flex; justify-content: space-between; width: 95%;">
                         <input type="text" name="last_name" placeholder="Last Name" required style="width: 45%;">
-                        <input type="text" name="first_name" placeholder="First Name" required style="width: 45%;">
+                        <input type="text" name="first_name" placeholder="First Name" required style="width: 45%;" >
                     </div>
                     <input type="email" name="email" placeholder="Your Email" required>
                     <input type="tel" name="phone" placeholder="Your Phone Number" required>
@@ -265,6 +265,13 @@
             <div class="footer-logo">
                 <img src="./images/logo.png" alt="Portfolio Logo" class="logo">
             </div>
+            <div class="footer-services">
+                <h2>My Services</h2>
+                <p>Custom Web Design</p>
+                <p> UI/UX Design & Prototyping</p>
+                <p> Responsive Frontend Development</p>
+            </div>
+            
             <div class="footer-contact">
                 <h2>Contact Me</h2>
                 <p>Email: <a href="mailto:raimagull87@gmail.com">raimagull87@gmail.com</a></p>
