all files tracked

--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
                 <div class="hex" data-aos="fade-down" data-aos-delay="600"><i class="fa-brands fa-figma"></i> Figma</div>
                 <div class="hex" data-aos="fade-down" data-aos-delay="700"><i class="fa-solid fa-palette"></i> UI/UX</div>
                 <div class="hex" data-aos="fade-down" data-aos-delay="800"><i class="fa-solid fa-magnifying-glass"></i> SEO</div>
+                 <div class="hex" data-aos="fade-down" data-aos-delay="900"><i class="fa-solid fa-database"></i> My SQL</div>
+                   <div class="hex" data-aos="fade-down" data-aos-delay="1000"><i class="fa-brands fa-php"></i>Php</div>
             </div>
         </section>
         <!--Skills end-->
@@ -223,6 +225,23 @@
                         <h3>Calculator</h3>
                         <p>A simple, efficient, and responsive calculator for everyday use.</p>
                         <a href="https://easy-basic-calculator.netlify.app/" target="_blank">View Project</a>
+                    </div>
+                </div>
+              
+                  <div class="project-card" data-aos="fade-down" data-aos-delay="800">
+                    <img src="./images/Cosmetics.png" alt="Project Five">
+                    <div class="project-info">
+                        <h3>Glamourae Cosmetics</h3>
+                        <p>Working On</p>
+                        <a href="https://glamourae-cosmetics.netlify.app/" target="_blank">View Project</a>
+                    </div>
+                </div>
+                 <div class="project-card" data-aos="fade-down" data-aos-delay="800">
+                    <img src="./images/PixelPluse.png" alt="Project Five">
+                    <div class="project-info">
+                        <h3>Pixel Pulse Gallery</h3>
+                        <p>Working On</p>
+                        <a href="  https://pixelpulse-image-gallery.netlify.app/" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
