--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn">Hire Me</a>
-                    <a class="btn secondary" href="./RaimaGullResume.pdf" download>
+                    <a class="btn secondary" href="RaimaCV.pdf" download>
                         <i class="fas fa-cloud-download-alt"></i> Download CV
                     </a>
                 </div>
@@ -167,9 +167,14 @@
                 <div class="hex" data-aos="fade-down" data-aos-delay="500"><i class="fa-brands fa-bootstrap"></i> Bootstrap</div>
                 <div class="hex" data-aos="fade-down" data-aos-delay="600"><i class="fa-brands fa-figma"></i> Figma</div>
                 <div class="hex" data-aos="fade-down" data-aos-delay="700"><i class="fa-solid fa-palette"></i> UI/UX</div>
-                <div class="hex" data-aos="fade-down" data-aos-delay="800"><i class="fa-solid fa-magnifying-glass"></i> SEO</div>
-                 <div class="hex" data-aos="fade-down" data-aos-delay="900"><i class="fa-solid fa-database"></i> My SQL</div>
-                   <div class="hex" data-aos="fade-down" data-aos-delay="1000"><i class="fa-brands fa-php"></i>Php</div>
+             <div class="hex" data-aos="fade-down" data-aos-delay="900"><i class="fa-solid fa-database"></i> My SQL</div>
+<div class="hex" data-aos="fade-down" data-aos-delay="1000"><i class="fa-brands fa-php"></i> Php
+</div>
+<div class="hex" data-aos="fade-down" data-aos-delay="1100"> <i class="fa-solid fa-code"></i> C#
+</div>
+<div class="hex" data-aos="fade-down" data-aos-delay="1200"><i class="fa-solid fa-laptop-code"></i> .NET
+</div>
+
             </div>
         </section>
         <!--Skills end-->
